<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_card_rounded"
        android:padding="28dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivWeather"
            android:importantForAccessibility="no"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/cloud_24dp_1f1f1f_fill0_wght400_grad0_opsz24"
            app:tint="@color/accent_amber" />

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/temp_placeholder"
            android:textColor="@color/white"
            android:textSize="64sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condition_placeholder"
            android:textColor="@color/white_70"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/feels_like_placeholder"
            android:textColor="@color/white_50"
            android:textSize="13sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
